[package]
name = "hcbs_test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
nom = "8.0.0"
rand = "0.10.0"
sysinfo = "0.38.4"
sysconf = "0.3.4"
crossbeam = "0.8.4"
hcbs-utils = { git = "https://github.com/Yurand2000/hcbs-utils.git" }
eva-rt-common = "0.1.1"
eva-rt-engine = { git = "https://github.com/Yurand2000/EVA-rt-Engine" }

[features]
cgroup_v2 = []

[[bin]]
name = "regression"
path = "src/bin/regression/main.rs"

[[bin]]
name = "constraints_cgroup_setup"
path = "src/bin/constraints/cgroup_setup.rs"

[[bin]]
name = "stress"
path = "src/bin/stress/main.rs"

[[bin]]
name = "time"
path = "src/bin/time/main.rs"

[[bin]]
name = "taskset"
path = "src/bin/taskset/main.rs"

[[bin]]
name = "tools"
path = "src/bin/tools/main.rs"

[[bin]]
name = "taskset_gen"
path = "src/bin/taskset_gen/main.rs"
